update stitcher link

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
     <a href="tou.rss" title="RSS"><img src="img/rss.svg" class="logo" alt="RSS"></a>
     <a href="https://open.spotify.com/show/6GRHTa64qJPaaReYXmgJ1q?si=fkLK7tfkQEWato7GuzZRtw&dl_branch=1" title="Spotify"><img src="img/spotify.svg" alt="Spotify" class="logo"></a>
     <a href="https://podcasts.apple.com/us/podcast/the-open-universe/id1563465572" title="Apple Podcasts"><img src="img/apple.svg" alt="Apple Podcasts" class="logo"></a>
-    <a href="https://www.stitcher.com/show/the-open-universe" title="Stitcher"><img src="img/stitcher.svg" alt="Stitcher" class="logo"></a>
+    <a href="https://www.stitcher.com/show/1056801" title="Stitcher"><img src="img/stitcher.svg" alt="Stitcher" class="logo"></a>
     <a href="https://podcasts.google.com/feed/aHR0cHM6Ly90aGVvcGVudW5pdmVyc2Uub3JnL3RvdS5yc3M" title="Google Podcasts"><img src="img/google.svg" alt="Google Podcasts" class="logo"></a>
 </div>
 </div>
