--- a/index.html
+++ b/index.html
@@ -53,6 +53,8 @@
     <a href="https://podcasts.apple.com/us/podcast/the-open-universe/id1563465572" title="Apple Podcasts"><img src="img/apple.svg" alt="Apple Podcasts" class="logo"></a>
     <a href="https://www.stitcher.com/show/1056801" title="Stitcher"><img src="img/stitcher.svg" alt="Stitcher" class="logo"></a>
     <a href="https://podcasts.google.com/feed/aHR0cHM6Ly90aGVvcGVudW5pdmVyc2Uub3JnL3RvdS5yc3M" title="Google Podcasts"><img src="img/google.svg" alt="Google Podcasts" class="logo"></a>
+    <p style="color:#999999; display:inline-block; text-align: center;">|</p>
+    <a href="https://twitter.com/TheOpenUniverse" title="Twitter"><img src="img/twitter.svg" class="logo" alt="Twitter"></a>
 </div>
 </div>
 </div>
