--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
     <a href="https://podcasts.apple.com/us/podcast/the-open-universe/id1563465572" title="Apple Podcasts"><img src="img/apple.svg" alt="Apple Podcasts" class="logo"></a>
     <a href="https://www.stitcher.com/show/1056801" title="Stitcher"><img src="img/stitcher.svg" alt="Stitcher" class="logo"></a>
     <a href="https://podcasts.google.com/feed/aHR0cHM6Ly90aGVvcGVudW5pdmVyc2Uub3JnL3RvdS5yc3M" title="Google Podcasts"><img src="img/google.svg" alt="Google Podcasts" class="logo"></a>
-    <a href="https://music.amazon.co.uk/podcasts/216468aa-5b84-4e09-8432-a8bf6f43eeca/the-open-universe" title="Amazon Music"><img src="img/Amazon_Music_Button_Indigo_small.png" alt="Amazon Music" class="logo"></a>
+    <a href="https://music.amazon.co.uk/podcasts/216468aa-5b84-4e09-8432-a8bf6f43eeca/the-open-universe" title="Amazon Music"><img src="img/Amazon_Music_logo.svg" alt="Amazon Music" class="logo"></a>
     <p style="color:#999999; display:inline-block; text-align: center;"> | Follow:</p>
     <a href="https://twitter.com/TheOpenUniverse" title="Twitter"><img src="img/twitter.svg" class="logo" alt="Twitter"></a>
 </div>
