--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@ function myFunction(xml) {
 
     // Left cell
     var cell_left = "";
-    cell_left += "<div class=table_left><p>" +
+    cell_left += "<div class=table_left id=episode" + j + "><p>" +
     "Episode #" +
     j +
     " [" +
