--- a/index.html
+++ b/index.html
@@ -54,8 +54,10 @@
     <a href="https://podcasts.google.com/feed/aHR0cHM6Ly90aGVvcGVudW5pdmVyc2Uub3JnL3RvdS5yc3M" title="Google Podcasts"><img src="img/google.svg" alt="Google Podcasts" class="logo"></a>
     <a href="https://music.amazon.co.uk/podcasts/216468aa-5b84-4e09-8432-a8bf6f43eeca/the-open-universe" title="Amazon Music"><img src="img/Amazon_Music_logo.svg" alt="Amazon Music" class="logo"></a>
     <a href="https://www.pandora.com/podcast/the-open-universe/PC:1001056801" title="Pandora"><img src="img/pandora.png" alt="Pandora" class="logo"></a>
+    <a href="https://www.youtube.com/@TheOpenUniversePodcast" title="YouTube"><img src="img/YouTube_Logo.svg" alt="YouTube" class="logo"></a>
     <p style="color:#999999; display:inline-block; text-align: center;"> | Follow:</p>
     <a href="https://twitter.com/TheOpenUniverse" title="X"><img src="img/x_logo.svg" class="logo" alt="X"></a>
+    <a href="https://bsky.app/profile/theopenuniverse.bsky.social" title="Bluesky"><img src="img/Bluesky_Logo.svg" class="logo" alt="Bluesky"></a>
     <a href="https://www.tiktok.com/@tou_podcast" title="TikTok"><img src="img/tiktok.svg" class="logo" alt="TikTok"></a>
 </div>
 </div>
